--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
         <p class="paragraph paragraph-4"><span>“</span> The engineer did not try to overcome the obstacle, and he was
             wise. </p>
+        <button>Discover</button>
     </div>
 
 </body>
